...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Plantita App'),
        actions: [
          TextButton(
            onPressed: () async {
              final authService = getIt<AuthService>();
              await authService.logout();
              GoRouter.of(context).go('/login');
...
          BottomNavigationBarItem(
            icon: Icon(Icons.home),
            label: 'Home',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.movie),
            label: 'Reels',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.timelapse),
            label: 'Timelapses',
          ),
          BottomNavigationBarItem(
...
